--- a/client/views/index/template.html
+++ b/client/views/index/template.html
@@ -1,5 +1,14 @@
 <template name="Index">
-  <h1 class="ui header">Latest packages</h1>
+  <div class="ui grid head">
+    <div class="twelve wide column">
+      <h1 class="ui header">Latest packages</h1>
+    </div>
+    <div class="four wide column">
+      <div class="ui search">
+        <input class="prompt" type="text" placeholder="Search...">
+      </div>
+    </div>
+  </div>
   <section class="latest">
     <table class="ui table">
       <thead>
