--- a/client/views/package/styles.styl
+++ b/client/views/package/styles.styl
@@ -1,2 +1,16 @@
 .package-data
   margin -1rem 0 1rem
+
+.ui.green.label
+  &[data-status="100"]
+    background-color #4c1 !important
+    border-color #4c1 !important
+  &[data-status="20"]
+    background-color #97CA00 !important
+    border-color #97CA00 !important
+  &[data-status="10"]
+    background-color #dfb317 !important
+    border-color #dfb317 !important
+  &[data-status="0"]
+    background-color #fe7d37 !important
+    border-color #fe7d37 !important
