--- a/client/views/package/template.html
+++ b/client/views/package/template.html
@@ -22,8 +22,18 @@
         {{#each package.dependencies}}
           <tr>
             <td><a href="{{pathFor 'package' pkgname=name}}">{{name}}</a> <img src="/{{name}}.svg" /></td>
-            <td>{{package.getDepVersion name}}</td>
-            <td>{{latestVersion.version}}</td>
+            <td>
+              <div class="ui green label" data-status="{{package.getDepStatus name}}">
+                {{#with package.getDepVersion name}}
+                  {{constraint}}
+                {{/with}}
+              </div>
+            </td>
+            <td>
+              <div class="ui label">
+                {{latestVersion.version}}
+              </div>
+            </td>
             <td>{{formatLocalized latestVersion.published}}</td>
           </tr>
         {{/each}}
